; ModuleID = '/home/carl/AnghaBench/reactos/dll/cpl/timedate/extr_internettime.c_EnableDialogText.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/cpl/timedate/extr_internettime.c_EnableDialogText.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IDC_AUTOSYNC = common dso_local global i32 0, align 4
@BM_GETCHECK = common dso_local global i32 0, align 4
@BST_CHECKED = common dso_local global i64 0, align 8
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@IDC_SERVERTEXT = common dso_local global i32 0, align 4
@IDC_SERVERLIST = common dso_local global i32 0, align 4
@IDC_UPDATEBUTTON = common dso_local global i32 0, align 4
@IDC_SUCSYNC = common dso_local global i32 0, align 4
@IDC_NEXTSYNC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @EnableDialogText to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @EnableDialogText(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* @IDC_AUTOSYNC, align 4
  %8 = load i32, i32* @BM_GETCHECK, align 4
  %9 = call i64 @SendDlgItemMessageW(i32 %6, i32 %7, i32 %8, i32 0, i32 0)
  store i64 %9, i64* %5, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @BST_CHECKED, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i32, i32* @TRUE, align 4
  br label %17

15:                                               ; preds = %1
  %16 = load i32, i32* @FALSE, align 4
  br label %17

17:                                               ; preds = %15, %13
  %18 = phi i32 [ %14, %13 ], [ %16, %15 ]
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %3, align 4
  %20 = load i32, i32* @IDC_SERVERTEXT, align 4
  %21 = call i32 @GetDlgItem(i32 %19, i32 %20)
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @EnableWindow(i32 %21, i32 %22)
  %24 = load i32, i32* %3, align 4
  %25 = load i32, i32* @IDC_SERVERLIST, align 4
  %26 = call i32 @GetDlgItem(i32 %24, i32 %25)
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @EnableWindow(i32 %26, i32 %27)
  %29 = load i32, i32* %3, align 4
  %30 = load i32, i32* @IDC_UPDATEBUTTON, align 4
  %31 = call i32 @GetDlgItem(i32 %29, i32 %30)
  %32 = load i32, i32* %4, align 4
  %33 = call i32 @EnableWindow(i32 %31, i32 %32)
  %34 = load i32, i32* %3, align 4
  %35 = load i32, i32* @IDC_SUCSYNC, align 4
  %36 = call i32 @GetDlgItem(i32 %34, i32 %35)
  %37 = load i32, i32* %4, align 4
  %38 = call i32 @EnableWindow(i32 %36, i32 %37)
  %39 = load i32, i32* %3, align 4
  %40 = load i32, i32* @IDC_NEXTSYNC, align 4
  %41 = call i32 @GetDlgItem(i32 %39, i32 %40)
  %42 = load i32, i32* %4, align 4
  %43 = call i32 @EnableWindow(i32 %41, i32 %42)
  %44 = load i32, i32* %2, align 4
  ret i32 %44
}

declare dso_local i64 @SendDlgItemMessageW(i32, i32, i32, i32, i32) #1

declare dso_local i32 @EnableWindow(i32, i32) #1

declare dso_local i32 @GetDlgItem(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
